--- a/template-crud-tailwind/read.html
+++ b/template-crud-tailwind/read.html
@@ -17,7 +17,10 @@
 
             <!-- nav start -->
             <div>
-                <a href="index.html" class="bg-blue-900 text-white px-1 rounded shadow">Back to index</a>
+                <a href="read.html" class="bg-blue-900 text-white py-2 px-3 rounded shadow mr-2">
+                    <i class="fa-solid fa-arrow-left mr-1"></i>
+                    Back to read
+                </a>
             </div>
             <!-- nav end -->
 
@@ -30,7 +33,10 @@
             <!-- table start -->
             <div>
                 
-                <a href="create.html" class="bg-green-700 text-white px-1 rounded shadow">Create</a>
+                <a href="create.html" class="bg-green-700 text-white py-2 px-3 rounded shadow mr-2">
+                    <i class="fa-solid fa-plus mr-1"></i>
+                    Create
+                </a>
                 
                 <br><br>
 
@@ -49,9 +55,18 @@
                             <td class="border p-3">Yekson Bagau</td>
                             <td class="border p-3">y.bagau@sagufoundation.org</td>
                             <td class="border p-3">
-                                <a href="read-detail.html" class="bg-blue-700 text-white px-1 rounded shadow">Detail</a>
-                                <a href="update.html" class="bg-green-700 text-white px-1 rounded shadow">Update</a>
-                                <a href="delete.html" class="bg-red-700 text-white px-1 rounded shadow">Delete</a>
+                                <a href="read-detail.html" class="bg-blue-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-eye mr-1"></i>
+                                    Detail
+                                </a>
+                                <a href="update.html" class="bg-green-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-pencil mr-1"></i>
+                                    Update
+                                </a>
+                                <a href="delete.html" class="bg-red-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-trash mr-1"></i>
+                                    Delete
+                                </a>
                             </td>
                         </tr>
                         <tr>
@@ -59,9 +74,18 @@
                             <td class="border p-3">Aftania Waromi</td>
                             <td class="border p-3">a.waromi@sagufoundation.org</td>
                             <td class="border p-3">
-                                <a href="read-detail.html" class="bg-blue-700 text-white px-1 rounded shadow">Detail</a>
-                                <a href="update.html" class="bg-green-700 text-white px-1 rounded shadow">Update</a>
-                                <a href="delete.html" class="bg-red-700 text-white px-1 rounded shadow">Delete</a>
+                                <a href="read-detail.html" class="bg-blue-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-eye mr-1"></i>
+                                    Detail
+                                </a>
+                                <a href="update.html" class="bg-green-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-pencil mr-1"></i>
+                                    Update
+                                </a>
+                                <a href="delete.html" class="bg-red-700 text-white py-1 px-3 rounded shadow mr-2">
+                                    <i class="fa-solid fa-trash mr-1"></i>
+                                    Delete
+                                </a>
                             </td>
                         </tr>
                     </tbody>
