--- a/template-crud-tailwind/update.html
+++ b/template-crud-tailwind/update.html
@@ -17,7 +17,10 @@
 
             <!-- nav start -->
             <div>
-                <a href="read.html" class="bg-blue-900 text-white px-1 rounded shadow">Back to read</a>
+                <a href="read.html" class="bg-blue-900 text-white py-2 px-3 rounded shadow mr-2">
+                    <i class="fa-solid fa-arrow-left mr-1"></i>
+                    Back to read
+                </a>
             </div>
             <!-- nav end -->
 
@@ -35,17 +38,17 @@
 
                     <div class="mb-3">
                         <label for="complete-name">Complete name</label>
-                        <input type="text" id="complete-name" name="complete-name" class="border rounded shadow p-2 block" value="Yekson Bagau">
+                        <input type="text" id="complete-name" name="complete-name" class="border rounded shadow p-2 block w-1/3" value="Yekson Bagau">
                     </div>
 
                     <div class="mb-3">
                         <label for="email-address">Email address</label>
-                        <input type="email" id="email-address" name="email-address" class="border rounded shadow p-2 block" value="y.bagau@sagufoundation.org">
+                        <input type="email" id="email-address" name="email-address" class="border rounded shadow p-2 block w-1/3" value="y.bagau@sagufoundation.org">
                     </div>
 
                     <div class="mb-3">
                         <label for="phone-number">Phone number</label>
-                        <input type="tel" id="phone-number" name="phone-number" class="border rounded shadow p-2 block" value="+62821123456789">
+                        <input type="tel" id="phone-number" name="phone-number" class="border rounded shadow p-2 block w-1/3" value="+62821123456789">
                     </div>
 
                     <div class="mb-3">
