--- a/template-crud-tailwind/delete.html
+++ b/template-crud-tailwind/delete.html
@@ -17,7 +17,10 @@
 
             <!-- nav start -->
             <div>
-                <a href="read.html" class="bg-blue-900 text-white px-1 rounded shadow">Back to read</a>
+                <a href="index.html" class="bg-blue-900 text-white py-2 px-3 rounded shadow mr-2">
+                    <i class="fa-solid fa-arrow-left mr-1"></i>
+                    Back to index
+                </a>
             </div>
             <!-- nav end -->
 
