--- a/template-crud-tailwind/read.html
+++ b/template-crud-tailwind/read.html
@@ -17,9 +17,9 @@
 
             <!-- nav start -->
             <div>
-                <a href="read.html" class="bg-blue-900 text-white py-2 px-3 rounded shadow mr-2">
+                <a href="index.html" class="bg-blue-900 text-white py-2 px-3 rounded shadow mr-2">
                     <i class="fa-solid fa-arrow-left mr-1"></i>
-                    Back to read
+                    Back to index
                 </a>
             </div>
             <!-- nav end -->
